Changelog
=========

2.0.11 (unreleased)
-------------------

- Nothing changed yet.


2.0.10 (2016-11-28)
-------------------

- Added unit to shop item.
  [lknoepfel]

- Make variations a mapping when saving to the annotation storage.
  [raphael-s]


2.0.9 (2016-11-11)
------------------

- Fix hidden uid inputs. They had type=text too.
  [mathias.leimgruber]


2.0.8 (2016-03-30)
------------------

- Fix adjust styling for shopitem variation
  [elioschmutz]


2.0.7 (2015-06-18)
------------------

- Fixed variation js bug.
  [lknoepfel]

- Fixed bug in edit variations where variations didn't get activated.
  [lknoepfel]


2.0.6 (2015-03-06)
------------------

- Use a separate permission (ftw.shop: Assign shopping cart portlet) for the write permission
  of the shopping cart portlet.
  [mathias.leimgruber]

- Consistently use resource directory instead of individually registered resources,
  and make resource URLs always absolute and based on portal_url.
  [erral]


2.0.5 (2015-02-19)
------------------

- Fix getting the uid in get_suppliers, if there are variations.
  [mathias.leimgruber]

- Fill content-core slot instead of main slot in shopitem view. Fixes #10
  [erral]

- Some more translation fixes.
  [erral]


2.0.4 (2015-01-21)
------------------

- Added basque (eu) translation.
  [erral]

- Validate email address in checkout form.
  [jone]


2.0.3 (2014-08-29)
------------------

- Set reply-to to customer for shop-owner and supplier mails.
  [jone]

- Added Spanish translations.
  [Enny]

2.0.2 (2014-08-13)
------------------

- Fix variation-toplevel-group css. FF floats the table around the image.
  [mathias.leimgruber]


2.0.1 (2014-08-12)
------------------

- Fix payment processor lookup in checkout wizard.
  [mathias.leimgruber]

- Fix adapter lookups in vocabularies.
  [mathias.leimgruber]

- Fix get suppliers on shopitems with variations.
  [mathias.leimgruber]

- Implement getting supplier recursively.
  [mathias.leimgruber]

