@@ -4,7 +4,9 @@ Changelog
 2.0.11 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Use uid as the key for storing category ranks, not the category object itself.
+  This makes the category ranks serializable and thus publishable for "ftw.publisher".
+  [mbaechtold]
 
 
 2.0.10 (2016-11-28)
